# advent_of_code_2024

./: pyproject.toml
day1/: day1.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py
day14/: day14.py
day15/: day15.py
day16/: day16.py
day17/: day17.py
day18/: day18.py  test.py
day19/: day19.py
day2/: day2.py  input_test.txt
day20/: day20.py  old_day20.py
day21/: day21.py  test.py
day22/: day22.py  test.py
day23/: day23.py  old_day23.py  part1.py  part2.py
day24/: day24.py  test.py
day25/: day25.py
day3/: day3.py
day4/: day4.py
day5/: day5.py
day6/: day6.py  test.py
day7/: day7.py  test.py
day8/: day8.py  test.py
day9/: day9_original_attempt.py  day9_part2.py  day_part1.py
