[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["David Sanchez Arocha <davidsa@themediapeople.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
