[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["David Sanchez Arocha <davidsa@themediapeople.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
pyperclip = "^1.9.0"
setuptools = "^75.6.0"
sympy = "^1.13.3"
opencv-python = "^4.10.0.84"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
